[package]
name = "epic_jwk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs", "p256", "p384"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
